# icicle-ambiata

./: .ghci  .gitignore  .gitmodules  .travis.yml  README.md  Setup.hs  boris-git.toml  boris.toml  cabal  icicle.cabal  icicle.lock-7.10.2  icicle.lock-7.8.4  icicle.submodules  mafia  master.toml
icicle-compiler/: .ghci  icicle.cabal  icicle.lock-7.10.2  icicle.lock-7.8.4  icicle.lock-8.0.1  master.toml
icicle-compiler/bench/: bench.hs
icicle-compiler/data/example/: DictionaryTrial.toml  dictionary.psv
icicle-compiler/data/sea/: 10-mempool.h  20-simple.h  21-time.h  42-text-conversion.h  52-psv.h
icicle-compiler/java/examples/: Asx.java  GroupDate.java  LatestAverage.java
icicle-compiler/java/icicle/: IcicleComputer.java  IcicleStruct.java  Latest.java
icicle-compiler/main/: icicle-bench.hs  icicle-make.hs  icicle.hs
icicle-compiler/src/: Icicle.hs
icicle-compiler/src/Icicle/: Benchmark.hs  Command.hs  Compiler.hs  Data.hs  Debug.hs  Pipeline.hs  Repl.hs  Simulator.hs
icicle-compiler/src/Icicle/Avalanche/: Annot.hs  Check.hs  Eval.hs  FromCore.hs  Program.hs  Simp.hs
icicle-compiler/src/Icicle/Avalanche/Prim/: Compounds.hs  Eval.hs  Flat.hs
icicle-compiler/src/Icicle/Avalanche/Statement/: Flatten.hs  Simp.hs  Statement.hs
icicle-compiler/src/Icicle/Benchmark/: Generator.hs
icicle-compiler/src/Icicle/Canyon/: FromAvalanche.hs  Program.hs  Statement.hs
icicle-compiler/src/Icicle/Command/: Compile.hs  Query.hs  Timer.hs
icicle-compiler/src/Icicle/Common/Exp/: Alpha.hs  Compounds.hs  Error.hs
icicle-compiler/src/Icicle/Compiler/: Sea.hs
icicle-compiler/src/Icicle/Core/: Stream.hs
icicle-compiler/src/Icicle/Core/Exp/: Simp.hs
icicle-compiler/src/Icicle/Core/Program/: Error.hs
icicle-compiler/src/Icicle/Data/: Mode.hs  Time.hs
icicle-compiler/src/Icicle/Dictionary/: Demographics.hs
icicle-compiler/src/Icicle/Internal/: Aeson.hs  Rename.hs
icicle-compiler/src/Icicle/Repl/: Base.hs  Completion.hs  Data.hs  Flag.hs  Help.hs  Load.hs  Monad.hs  Option.hs  Parser.hs  Pretty.hs  Query.hs  Source.hs
icicle-compiler/src/Icicle/Runtime/: Any.hs  Array.hs  Data.hs  Evaluator.hs  Logical.hs  Stencil.hs  Striped.hs
icicle-compiler/src/Icicle/Runtime/Data/: Any.hs  Array.hs  IO.hs  Logical.hs  Mask.hs  Primitive.hs  Schema.hs  Striped.hs
icicle-compiler/src/Icicle/Runtime/Serial/: Psv.hs  Zebra.hs
icicle-compiler/src/Icicle/Sea/: Data.hs  Error.hs  Eval.hs  Fleet.hs  FromAvalanche.hs  FromCanyon.hs  Header.hs  IO.hs  Name.hs  Preamble.hs
icicle-compiler/src/Icicle/Sea/Chords/: File.hs  Parse.hs
icicle-compiler/src/Icicle/Sea/Eval/: Base.hs  Program.hs
icicle-compiler/src/Icicle/Sea/FromAvalanche/: Analysis.hs  Base.hs  Exp.hs  Prim.hs  Program.hs  State.hs  Type.hs
icicle-compiler/src/Icicle/Sea/FromCanyon/: Analysis.hs  Base.hs  Prim.hs  Program.hs  State.hs  Type.hs
icicle-compiler/src/Icicle/Sea/IO/: Base.hs  Offset.hs  Psv.hs  Zebra.hs
icicle-compiler/src/Icicle/Source/: Parser.hs  Query.hs
icicle-compiler/src/Icicle/Source/Checker/: Constraint.hs  Resumable.hs
icicle-compiler/src/Icicle/Source/Parser/: Token.hs
icicle-compiler/src/Icicle/Source/Query/: Context.hs  Function.hs
icicle-compiler/src/Icicle/Source/ToCore/: Prim.hs  ToCore.hs
icicle-compiler/src/Icicle/Source/Transform/: Inline.hs
icicle-compiler/src/Icicle/Source/Type/: Compounds.hs
icicle-compiler/src/Icicle/Storage/Dictionary/: Toml.hs
icicle-compiler/test/: icicle-test.cabal  test-cli.hs  test-io.hs  test.hs
icicle-compiler/test/Icicle/Test/: Encoding.hs  Language.hs  Serial.hs
icicle-compiler/test/Icicle/Test/Arbitrary/: Core.hs  (+6 more)
icicle-compiler/test/cli/bench/: run  t1-dictionary.toml  t1-in.psv  t2-drop-1.txt  t2-expected-2.psv  t2-in.psv  t2b-expected.psv  t2b-in.psv  t3-expected.psv  t3b-dictionary.toml  t3b-expected.psv  t4-dictionary.toml  t4-expected.psv  t4-in.psv
icicle-compiler/test/cli/icicle/: run  t1-dictionary.toml  t1-expected.psv  t2-dictionary.toml  t2-drop-1.txt  t2-drop-2.txt  t2-expected-2.psv  t2b-dictionary.toml  t2b-drop.txt  t2b-expected.schema.json  t3-dictionary.toml  t3-drop.txt  t3-expected.psv  t3-in.psv  t3b-drop.txt  t3b-expected.schema.json  t4-expected.psv  t5-dictionary.toml  t5-expected.psv  t5-expected.schema.json  t5-in.psv  t6-expected.psv  t6-input  t6-zebra.toml  t7-chord-name-chord.psv  t7-chord-name-dictionary.toml  t7-expected.psv  t7-expected.schema.json
icicle-compiler/test/cli/repl/: dictionary.toml  run
icicle-compiler/test/cli/zebra/: dictionary.toml  expected.psv  expected.schema.json  generate  input.zbin2  input.zbin3  input.zschema  input.ztxt  run
icicle-compiler/test/cli/zebra-nested/: dictionary.toml  expected.psv  expected.schema.json  generate  input.zbin2  input.zbin3  input.zschema  input.ztxt  run
icicle-core/: Setup.hs  icicle-core.cabal  icicle-core.lock-7.10.2  icicle-core.lock-8.0.1  master.toml
icicle-data/: icicle-data.cabal  icicle-data.lock-7.10.2  icicle-data.lock-8.0.2  mafia  master.toml
icicle-data/src/Icicle/: BubbleGum.hs  Data.hs
icicle-data/src/Icicle/Common/: Annot.hs  Base.hs  Data.hs  Eval.hs  FixT.hs  Fragment.hs  Fresh.hs  NanEq.hs  Type.hs  Value.hs
icicle-data/src/Icicle/Compiler/: Data.hs
icicle-data/src/Icicle/Data/: Fact.hs  Name.hs  Time.hs
icicle-data/src/Icicle/Internal/: Pretty.hs
icicle-repl/: Setup.hs  icicle-repl.cabal  icicle-repl.lock-7.10.2  icicle-repl.lock-8.0.1  master.toml
icicle-repl/main/: icicle-repl.hs
icicle-repl/src/Icicle/: Repl.hs
icicle-repl/src/Icicle/Repl/: Base.hs  Source.hs
icicle-repl/test/: test-cli.hs
icicle-repl/test/cli/repl/: data-tomb.psv
icicle-source/: icicle-source.cabal  icicle-source.lock-7.10.2  icicle-source.lock-8.0.1  icicle-source.lock-8.0.2  master.toml
icicle-source/src/Icicle/: Encoding.hs  Serial.hs
icicle-source/src/Icicle/Compiler/: Source.hs
icicle-source/src/Icicle/Dictionary/: Data.hs  Demographics.hs
icicle-source/src/Icicle/Sorbet/: Position.hs
icicle-source/src/Icicle/Source/: Eval.hs  Parser.hs  PrettyAnnot.hs
icicle-source/src/Icicle/Storage/: Encoding.hs
(+711 files in other folders)
