name:                  icicle
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              icicle
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           icicle.

library
  build-depends:
                       base                            >= 3          && < 5
                     , aeson                           == 0.8.*
                     , ambiata-jetski
                     , ambiata-p
                     , ambiata-x-either
                     , bifunctors                      == 4.2.*
                     , bytestring                      == 0.10.*
                     , containers                      == 0.5.*
                     , dates                           == 0.2.*
                     , time                            == 1.4.*
                     , lens                            == 4.7.*
                     , old-locale                      == 1.0.*
                     , either                          == 4.3.*
                     , filepath                        == 1.3.*
                     , scientific                      == 0.3.*
                     , semigroups                      == 0.16.*
                     , mmorph                          == 1.0.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.5
                     , unordered-containers            == 0.2.*
                     , validation                      == 0.5.*
                     , vector                          == 0.10.*
                     , wl-pprint                       == 1.2.*

                     -- Well, it might look very odd that we're using both attoparsec
                     -- and parsec.
                     -- The thing is, attoparsec only operates on raw strings, and our source parser
                     -- for Icicle should operate over tokens.
                     -- Going over tokens instead of strings simplifies the parser itself and makes everything
                     -- a bit cleaner.
                     -- As an added benefit, parsec will give us nicer error messages.
                     , attoparsec                      == 0.12.*
                     ,     parsec                      == 3.1.*


  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_icicle
                       Icicle

                       Icicle.Avalanche.Program
                       Icicle.Avalanche.FromCore
                       Icicle.Avalanche.Eval
                       Icicle.Avalanche.Check
                       Icicle.Avalanche.Simp
                       Icicle.Avalanche.Statement.Statement
                       Icicle.Avalanche.Statement.Scoped
                       Icicle.Avalanche.Statement.Simp
                       Icicle.Avalanche.Statement.Simp.ExpEnv
                       Icicle.Avalanche.Statement.Simp.Constructor
                       Icicle.Avalanche.Statement.Simp.Melt
                       Icicle.Avalanche.Statement.Flatten
                       Icicle.Avalanche.Prim.Flat
                       Icicle.Avalanche.Prim.Eval
                       Icicle.Avalanche.ToJava

                       Icicle.BubbleGum

                       Icicle.Common.Annot
                       Icicle.Common.Base
                       Icicle.Common.Fresh
                       Icicle.Common.Exp
                       Icicle.Common.Exp.Alpha
                       Icicle.Common.Exp.Check
                       Icicle.Common.Exp.Compounds
                       Icicle.Common.Exp.Error
                       Icicle.Common.Exp.Exp
                       Icicle.Common.Exp.Eval
                       Icicle.Common.Exp.Prim.Minimal
                       Icicle.Common.Exp.Prim.Eval
                       Icicle.Common.Exp.Simp
                       Icicle.Common.Exp.Simp.Beta
                       Icicle.Common.Exp.Simp.ANormal
                       Icicle.Common.Fragment
                       Icicle.Common.Type
                       Icicle.Common.Value

                       Icicle.Core
                       Icicle.Core.Exp.Exp
                       Icicle.Core.Exp.Prim
                       Icicle.Core.Exp.Combinators
                       Icicle.Core.Exp.Simp
                       Icicle.Core.Exp
                       Icicle.Core.Stream.Stream
                       Icicle.Core.Stream.Error
                       Icicle.Core.Stream.Check
                       Icicle.Core.Stream
                       Icicle.Core.Reduce.Reduce
                       Icicle.Core.Reduce.Error
                       Icicle.Core.Reduce.Check
                       Icicle.Core.Reduce
                       Icicle.Core.Program.Program
                       Icicle.Core.Program.Check
                       Icicle.Core.Program.Condense
                       Icicle.Core.Program.Error
                       Icicle.Core.Program.Simp
                       Icicle.Core.Program.Fusion

                       Icicle.Core.Eval.Exp
                       Icicle.Core.Eval.Stream
                       Icicle.Core.Eval.Reduce
                       Icicle.Core.Eval.Program

                       Icicle.Data
                       Icicle.Data.DateTime

                       Icicle.Dictionary
                       Icicle.Dictionary.Data
                       Icicle.Dictionary.Demographics

                       Icicle.Encoding
                       Icicle.Internal.EditDistance
                       Icicle.Internal.Pretty
                       Icicle.Internal.Rename
                       Icicle.Serial
                       Icicle.Simulator

                       Icicle.Source.Eval
                       Icicle.Source.Query
                       Icicle.Source.Query.Query
                       Icicle.Source.Query.Constructor
                       Icicle.Source.Query.Context
                       Icicle.Source.Query.Exp
                       Icicle.Source.Query.Function
                       Icicle.Source.Query.Operators
                       Icicle.Source.Lexer.Token
                       Icicle.Source.Lexer.Lexer

                       Icicle.Source.Parser
                       Icicle.Source.Parser.Constructor
                       Icicle.Source.Parser.Token
                       Icicle.Source.Parser.Operators
                       Icicle.Source.Parser.Parser

                       Icicle.Source.Type
                       Icicle.Source.Type.Base
                       Icicle.Source.Type.Compounds
                       Icicle.Source.Type.Constraints
                       Icicle.Source.Type.Pretty
                       Icicle.Source.Type.Subst

                       Icicle.Source.Checker
                       Icicle.Source.Checker.Base
                       Icicle.Source.Checker.Checker
                       Icicle.Source.Checker.Constraint
                       Icicle.Source.Checker.Error
                       Icicle.Source.Checker.Function
                       Icicle.Source.Checker.Invariants
                       Icicle.Source.Checker.Prim

                       Icicle.Source.ToCore.Base
                       Icicle.Source.ToCore.Context
                       Icicle.Source.ToCore.Exp
                       Icicle.Source.ToCore.Fold
                       Icicle.Source.ToCore.ToCore
                       Icicle.Source.ToCore.Prim

                       Icicle.Source.Transform.Base
                       Icicle.Source.Transform.SubstX
                       Icicle.Source.Transform.Inline
                       Icicle.Source.Transform.Desugar
                       Icicle.Source.Transform.Simp
                       Icicle.Source.Transform.Simp.Dumb
                       Icicle.Source.PrettyAnnot

                       Icicle.Storage.Dictionary.TextV1
                       Icicle.Storage.Dictionary.Toml
                       Icicle.Storage.Dictionary.Toml.Types
                       Icicle.Storage.Dictionary.Toml.Toml
                       Icicle.Storage.Dictionary.Toml.Prisms
                       Icicle.Storage.Dictionary.Toml.TomlDictionary

                       Icicle.Storage.Encoding

                       Icicle.Repl

-- executable             icicle
--     ghc-options:       -Wall -threaded -O2
--     main-is:           main/icicle.hs
--     build-depends:     base
--                      , either
--                      , icicle
--                      , filepath
--                      , p
--                      , text
--                      , transformers
--                      , x-optparse

executable             icicle-repl
    ghc-options:       -Wall -threaded -O2
    main-is:           main/icicle-repl.hs
    build-depends:     base
                     , ambiata-p
                     , ambiata-x-optparse
                     , containers
                     , either
                     , icicle
                     , directory
                     , filepath
                     , haskeline
                     , terminal-size
                     , text
                     , transformers
                     , wl-pprint
                     , parsec

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-aeson
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , icicle
                     , text
                     , aeson                           == 0.8.*
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , containers                      == 0.5.*
                     , transformers                    >= 0.3        && < 0.5
                     , either

test-suite test-cli
  type:                exitcode-stdio-1.0

  main-is:             test-cli.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
