name:                  icicle
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              icicle
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           icicle.

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-corpus
                     , ambiata-jetski
                     , ambiata-p
                     , ambiata-x-eithert
                     , aeson                           == 0.8.*
                     , annotated-wl-pprint             == 0.7.*
                     , bifunctors                      == 4.2.*
                     , bytestring                      == 0.10.*
                     , containers                      == 0.5.*
                     , dates                           == 0.2.*
                     , directory                       == 1.2.*
                     , deepseq                         >= 1.3        && < 1.5
                     , exceptions                      == 0.8.*
                     , file-embed                      == 0.0.9
                     , filepath                        >= 1.3        && < 1.5
                     , hashable                        == 1.2.*
                     , lens                            >= 4.7        && < 4.10
                     , language-c-quote                == 0.11.*
                     , srcloc                          == 0.5.*
                     , mainland-pretty                 == 0.4.*
                     , mmorph                          == 1.0.*
                     , old-locale                      == 1.0.*
                     , parallel                        == 3.2.*
                     , scientific                      == 0.3.*
                     , semigroups                      == 0.16.*
                     , temporary                       == 1.2.*
                     , text                            == 1.2.*
                     , thyme                           == 0.3.*
                     , time                            == 1.5.*
                     , time-locale-compat              == 0.1.*
                     , transformers                    >= 0.3        && < 0.5
                     , unix                            == 2.7.*
                     , unordered-containers            == 0.2.*
                     , validation                      == 0.5.*
                     , vector                          == 0.10.*
                     , vector-space                    == 0.10.*

                     -- Used for benchmark data generation
                     , QuickCheck                      == 2.8.*

                     -- Well, it might look very odd that we're using both attoparsec
                     -- and parsec.
                     -- The thing is, attoparsec only operates on raw strings, and our source parser
                     -- for Icicle should operate over tokens.
                     -- Going over tokens instead of strings simplifies the parser itself and makes everything
                     -- a bit cleaner.
                     -- As an added benefit, parsec will give us nicer error messages.
                     , attoparsec                      == 0.12.*
                     ,     parsec                      == 3.1.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_icicle
                       Icicle

                       Icicle.Avalanche.Program
                       Icicle.Avalanche.FromCore
                       Icicle.Avalanche.Eval
                       Icicle.Avalanche.Check
                       Icicle.Avalanche.Simp
                       Icicle.Avalanche.Annot
                       Icicle.Avalanche.Statement.Statement
                       Icicle.Avalanche.Statement.Simp
                       Icicle.Avalanche.Statement.Simp.Constructor
                       Icicle.Avalanche.Statement.Simp.Dead
                       Icicle.Avalanche.Statement.Simp.Eval
                       Icicle.Avalanche.Statement.Simp.ExpEnv
                       Icicle.Avalanche.Statement.Simp.ThreshOrd
                       Icicle.Avalanche.Statement.Simp.Melt
                       Icicle.Avalanche.Statement.Simp.Mutate
                       Icicle.Avalanche.Statement.Flatten
                       Icicle.Avalanche.Statement.Flatten.Base
                       Icicle.Avalanche.Statement.Flatten.Save
                       Icicle.Avalanche.Statement.Flatten.Statement
                       Icicle.Avalanche.Statement.Flatten.Type
                       Icicle.Avalanche.Statement.Flatten.Exp
                       Icicle.Avalanche.Statement.Edsl
                       Icicle.Avalanche.Prim.Flat
                       Icicle.Avalanche.Prim.Eval
                       Icicle.Avalanche.Prim.Compounds

                       Icicle.Benchmark
                       Icicle.Benchmark.Generator
                       Icicle.BubbleGum

                       Icicle.Common.Annot
                       Icicle.Common.Base
                       Icicle.Common.Data
                       Icicle.Common.Fresh
                       Icicle.Common.FixT
                       Icicle.Common.Exp
                       Icicle.Common.Exp.Alpha
                       Icicle.Common.Exp.Check
                       Icicle.Common.Exp.Compounds
                       Icicle.Common.Exp.Error
                       Icicle.Common.Exp.Exp
                       Icicle.Common.Exp.Eval
                       Icicle.Common.Exp.Prim.Minimal
                       Icicle.Common.Exp.Prim.Builtin
                       Icicle.Common.Exp.Prim.Eval
                       Icicle.Common.Exp.Simp
                       Icicle.Common.Exp.Simp.Beta
                       Icicle.Common.Exp.Simp.ANormal
                       Icicle.Common.Fragment
                       Icicle.Common.Type
                       Icicle.Common.Value

                       Icicle.Core
                       Icicle.Core.Exp.Exp
                       Icicle.Core.Exp.Prim
                       Icicle.Core.Exp.Combinators
                       Icicle.Core.Exp.Simp
                       Icicle.Core.Exp
                       Icicle.Core.Stream.Stream
                       Icicle.Core.Stream.Error
                       Icicle.Core.Stream.Check
                       Icicle.Core.Stream
                       Icicle.Core.Program.Program
                       Icicle.Core.Program.Check
                       Icicle.Core.Program.Condense
                       Icicle.Core.Program.Error
                       Icicle.Core.Program.Simp
                       Icicle.Core.Program.Fusion
                       Icicle.Core.Program.Subst

                       Icicle.Core.Eval.Exp
                       Icicle.Core.Eval.Stream
                       Icicle.Core.Eval.Program

                       Icicle.Data
                       Icicle.Data.Time

                       Icicle.Debug

                       Icicle.Dictionary
                       Icicle.Dictionary.Data
                       Icicle.Dictionary.Demographics

                       Icicle.Encoding
                       Icicle.Internal.EditDistance
                       Icicle.Internal.Pretty
                       Icicle.Internal.Rename
                       Icicle.Serial
                       Icicle.Simulator

                       Icicle.Sea.Error
                       Icicle.Sea.FromAvalanche
                       Icicle.Sea.FromAvalanche.Analysis
                       Icicle.Sea.FromAvalanche.Base
                       Icicle.Sea.FromAvalanche.Prim
                       Icicle.Sea.FromAvalanche.Program
                       Icicle.Sea.FromAvalanche.State
                       Icicle.Sea.FromAvalanche.Type
                       Icicle.Sea.Preamble
                       Icicle.Sea.Chords
                       Icicle.Sea.Chords.File
                       Icicle.Sea.Chords.Parse
                       Icicle.Sea.Eval
                       Icicle.Sea.Eval.Base
                       Icicle.Sea.Eval.Psv
                       Icicle.Sea.IO
                       Icicle.Sea.IO.Base
                       Icicle.Sea.IO.Base.Input
                       Icicle.Sea.IO.Psv
                       Icicle.Sea.IO.Psv.Base
                       Icicle.Sea.IO.Psv.Input
                       Icicle.Sea.IO.Psv.Output
                       Icicle.Sea.IO.Zebra
                       Icicle.Sea.IO.Zebra.Input

                       Icicle.Source.Eval
                       Icicle.Source.Query
                       Icicle.Source.Query.Query
                       Icicle.Source.Query.Builtin
                       Icicle.Source.Query.Constructor
                       Icicle.Source.Query.Context
                       Icicle.Source.Query.Exp
                       Icicle.Source.Query.Function
                       Icicle.Source.Query.Operators
                       Icicle.Source.Query.Prim
                       Icicle.Source.Lexer.Token
                       Icicle.Source.Lexer.Lexer

                       Icicle.Source.Parser
                       Icicle.Source.Parser.Constructor
                       Icicle.Source.Parser.Token
                       Icicle.Source.Parser.Operators
                       Icicle.Source.Parser.Parser

                       Icicle.Source.Type
                       Icicle.Source.Type.Base
                       Icicle.Source.Type.Compounds
                       Icicle.Source.Type.Constraints
                       Icicle.Source.Type.Pretty
                       Icicle.Source.Type.Subst

                       Icicle.Source.Checker
                       Icicle.Source.Checker.Base
                       Icicle.Source.Checker.Checker
                       Icicle.Source.Checker.Constraint
                       Icicle.Source.Checker.Error
                       Icicle.Source.Checker.Function
                       Icicle.Source.Checker.Invariants
                       Icicle.Source.Checker.Prim
                       Icicle.Source.Checker.Resumable

                       Icicle.Source.ToCore.Base
                       Icicle.Source.ToCore.Context
                       Icicle.Source.ToCore.Exp
                       Icicle.Source.ToCore.Fold
                       Icicle.Source.ToCore.ToCore
                       Icicle.Source.ToCore.Prim

                       Icicle.Source.Transform.Base
                       Icicle.Source.Transform.SubstX
                       Icicle.Source.Transform.Inline
                       Icicle.Source.Transform.Desugar
                       Icicle.Source.Transform.ReifyPossibility
                       Icicle.Source.Transform.Simp
                       Icicle.Source.Transform.Simp.Dumb
                       Icicle.Source.PrettyAnnot

                       Icicle.Storage.Dictionary.TextV1
                       Icicle.Storage.Dictionary.Toml
                       Icicle.Storage.Dictionary.Toml.Types
                       Icicle.Storage.Dictionary.Toml.Toml
                       Icicle.Storage.Dictionary.Toml.Persist
                       Icicle.Storage.Dictionary.Toml.Prisms
                       Icicle.Storage.Dictionary.Toml.Dense
                       Icicle.Storage.Dictionary.Toml.TomlDictionary

                       Icicle.Storage.Encoding

                       Icicle.Pipeline
                       Icicle.Repl

-- executable             icicle
--     ghc-options:       -Wall -threaded -O2
--     main-is:           main/icicle.hs
--     build-depends:     base
--                      , either
--                      , icicle
--                      , filepath
--                      , p
--                      , text
--                      , transformers
--                      , x-optparse

executable             icicle-repl
    ghc-options:       -Wall -threaded -O2 -funbox-strict-fields
    main-is:           main/icicle-repl.hs
    build-depends:     base
                     , ambiata-p
                     , ambiata-x-eithert
                     , ambiata-x-optparse
                     , ansi-terminal                   == 0.6.*
                     , containers
                     , icicle
                     , directory
                     , filepath
                     , haskeline
                     , terminal-size
                     , text
                     , transformers
                     , wl-pprint
                     , parsec

executable             icicle-bench
    ghc-options:       -Wall -threaded -O2 -funbox-strict-fields
    main-is:           main/icicle-bench.hs
    build-depends:     base
                     , ambiata-jetski
                     , ambiata-p
                     , ambiata-x-eithert
                     , icicle
                     , containers                      == 0.5.*
                     , directory                       == 1.2.*
                     , filepath                        >= 1.3        && < 1.5
                     , parallel                        == 3.2.*
                     , parsec                          == 3.1.*
                     , temporary                       == 1.2.*
                     , text                            == 1.2.*
                     , time                            == 1.5.*
                     , transformers                    >= 0.3        && < 0.5

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2 -funbox-strict-fields

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-aeson
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-jetski
                     , ambiata-x-eithert
                     , bifunctors                      == 4.2.*
                     , icicle
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , parsec
                     , hashable                        == 1.2.*
                     , unordered-containers            == 0.2.*
                     , QuickCheck                      == 2.8.*
                     , quickcheck-instances            == 0.3.*
                     , template-haskell                >= 2.4
                     , temporary
                     , text
                     , transformers

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , icicle
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , ambiata-x-eithert
                    , containers
                    , hashable                        == 1.2.*
                    , text
                    , QuickCheck                      == 2.8.*
                    , quickcheck-instances            == 0.3.*
                    , template-haskell                >= 2.4
                    , temporary
                    , transformers
                    , filepath

test-suite test-cli
  type:                exitcode-stdio-1.0

  main-is:             test-cli.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core

benchmark bench
  type:                exitcode-stdio-1.0

  main-is:             bench.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       bench

  build-depends:
                       base                            >= 3          && < 5
                     , icicle
                     , ambiata-p
                     , ambiata-x-eithert
                     , containers                      == 0.5.*
                     , criterion                       == 1.1.*
                     , directory                       == 1.2.*
                     , filepath                        == 1.4.*
                     , process                         >= 1.2.3      && < 1.3
                     , temporary                       == 1.2.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.5
